<resources>
    <string name="app_name">PortfolioApp</string>
    <string name="nanodegree_apps">My Nanodegree Apps</string>

    <string name="popular_movie_app">Popular Movies </string>
    <string name="stock_hawk_app">Stock Hawk</string>
    <string name="build_it_bigger_app">Build it bigger</string>
    <string name="make_app_material_app">Make your app material</string>
    <string name="go_ubiquitous">Go ubiquitous</string>
    <string name="capstone_app">Capstone my own app</string>

</resources>
