<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.halla.portfolioapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:id="@+id/tv_nano_apps"
            android:text="@string/nanodegree_apps" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_movies_app"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimaryDark"
        android:onClick=""
        android:layout_below="@+id/tv_nano_apps"
        android:layout_marginTop="26dp"
        android:padding="8dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        android:text="@string/popular_movie_app"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_movies_app"
        android:id="@+id/btn_stock_app"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimaryDark"
        android:padding="8dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        android:text="@string/stock_hawk_app"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_build_bigger_app"
        android:layout_below="@+id/btn_stock_app"
        android:padding="8dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        android:text="@string/build_it_bigger_app"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_make_material_app"
        android:layout_below="@+id/btn_build_bigger_app"
        android:padding="8dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        android:text="@string/make_app_material_app"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/btn_make_material_app"
        android:id="@+id/btn_ubiquitous_app"
        android:padding="8dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimaryDark"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        android:text="@string/go_ubiquitous"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/btn_ubiquitous_app"
        android:id="@+id/btn_capstone_app"
        android:padding="8dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimaryDark"
        android:layout_centerHorizontal="true"
        android:text="@string/capstone_app"
        />

</RelativeLayout>
